--- a/resume.qmd
+++ b/resume.qmd
@@ -1,6 +1,6 @@
 ---
 layout: cv
-title: Isaac Newtons's CV
+title: Kayson Garn's Resume
 ---
 # Isaac Newton
 Physicist, Mathematician, Cambridge professor.
