--- a/resume.qmd
+++ b/resume.qmd
@@ -2,8 +2,8 @@
 layout: cv
 title: Kayson Garn's Resume
 ---
-# Isaac Newton
-Physicist, Mathematician, Cambridge professor.
+# Kayson Garn
+BYU-Idaho Student studying Economics, Data Science & Mathematics.
 
 <div id="webaddress">
 <a href="isaac@applesdofall.org">isaac@applesdofall.org</a>
